# generative_ecg

./: .gitignore  pyproject.toml  requirements.txt  test.ipynb
Generative_ECG/: requirements.txt
Generative_ECG/examples/: test.ipynb
Generative_ECG/src/generative_ecg/generate/: generate_ecg.py
Generative_ECG/src/generative_ecg/models/: layer_utils.py  math_utils.py  nn_models.py
Generative_ECG/src/generative_ecg/test/: model_eval.py
Generative_ECG/src/generative_ecg/train/: train_vae_model.py
examples/ptb_xl/: ptb_xl.ipynb
examples/ptb_xl/load_preprocess/: load_data.py  load_split.py
mlscience_ekgs/: settings.py
mlscience_ekgs/Code/demos/: DR-VAE.ipynb  dipole-model.ipynb  mimic_ecg_eda.ipynb
mlscience_ekgs/Code/experiments/: s01_compute_dipole_model_imputation_rmse.py  s02_train_and_generate_ecgs.py  s03_train_discriminator.py  s04_morph_ecgs.py  s05_check_linproj_constraint.py  s06_project_and_filter_dataset.py
mlscience_ekgs/Code/src/: s01_data_loader.py  s02_dipole_model.py  s03_dr_vae.py  s04_models.py  s05_layers.py  s06_utils.py  s07_segment_ecg.py  s08_dsm.py
src/generative_ecg/: __init__.py
src/generative_ecg/dataset/: __init__.py  load_data.py  process_data.py  save_processed.py  segment_ecg.py
src/generative_ecg/generate/: __init__.py  generate_ecg.py  plot_utils.py
src/generative_ecg/models/: __init__.py  layer_utils.py  loss_utils.py  math_utils.py  nn_models.py
src/generative_ecg/test/: model_eval.py
src/generative_ecg/train/: __init__.py  cnn_utils.py  dr_vae_utils.py  train_cnn_model.py  train_vae_model.py
(+18 files in other folders)
